# sat-bot

./: .copier-answers.yml  .env.example  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/sat_slack_bot/: __init__.py  api.py  app.py  cli.py  memory.py  streaming_helper.py
src/sat_slack_bot/mcp_clients/: __init__.py
src/sat_slack_bot/provider/: __init__.py  llm.py
tests/: __init__.py  test_api.py  test_cli.py  test_import.py  test_streaming_helper.py
